# uselessOS

./: Cargo.toml  config.toml  make.bat
.cargo/: config.toml
bootloader/: [bits16].json  linker.ld
bootloader/src/: disk.rs  main.rs  stage1.asm
kernel/: Cargo.toml  linker.ld
kernel/src/: boot.rs  disk.rs  exceptions.rs  idt.rs  keyboard.rs  main.rs  pic.rs  tss.rs
libk/: Cargo.toml
libk/src/: lib.rs  port.rs  serial.rs
proc1/: Cargo.toml  [bits32].json  linker.ld
proc1/src/: main.rs
stage2/: Cargo.toml  linker.ld
stage2/src/: disk.rs  gdt.rs  main.rs  tss.rs
stage3/: Cargo.toml  build.rs  linker.ld
stage3/src/: disk.rs  main.rs
userland/: Cargo.toml  linker.ld
userland/src/: main.rs
