[workspace]
members = ["bootloader", "stage2", "stage3", "kernel", "userland", "proc1"]
resolver="2"

[workspace.package]
version = "0.0.0"
authors = ["", ""]
edition = "2021"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 1

[profile.dev.package.bootloader]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false

[profile.release.package.bootloader]
opt-level = "s"
codegen-units = 1
debug = false
overflow-checks = false